--- a/style.css
+++ b/style.css
@@ -40,9 +40,8 @@ span{
     padding-left: 5%;
     margin-top: 10%;
 }
-.half-width img{
-    width: 90%;
-    
+.skip-img{
+    width: 95%;
 }
 .link-button{
     text-decoration: none;
@@ -54,11 +53,14 @@ span{
     margin: 100px 0px 0px 0px;
 }
 #about-img{
-    width: 50%;
-
+    display: block;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  
 }
-#second-p{
-    font-size: 20px;
+.second-p{
+    font-size: 15px;
     margin-bottom: 10%;
 }
 .recipe{
@@ -69,51 +71,26 @@ span{
 }
 .recipe-title{
     box-shadow: 10px 10px 30px rgb(153, 148, 148);
-    width: 50%;
-    padding: 6%;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-bottom: 10%;
-    border-radius: 20px;
-    text-align:initial;
-   
+    padding: 1%;
+    margin: 5%;
+    border-radius: 20px;  
 }
-.text{
+.recipe-title img{
+    width: 100%;
+   border-radius: 20px;  
+}
+.my-recipes{
+    text-align: center;
+    margin: 0 200px;
+    padding: 0 80px;
+}
 
-}
-#reci-img1{
-    background-image: url(images/Project\ Cover5.png);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    background-position: top;
-    border-radius: 10px;
-   
-    width: 50%;
-    
-    
-
-}
-#reci-img2{
-    background-image: url(images/Project\ Cover5.png);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    background-position: top;
-
-}
-#reci-img3{
-    background-image: url(images/Project\ Cover5.png);
-    background-repeat: no-repeat;
-    background-size: 80%;
-    background-position: top;
-
-}
 
 footer{
     background-color: rgb(1, 18, 73);
     color:white;
     text-align: center;
     font-size: 15px;
-
     padding: 3%;
    
    
