--- a/style.css
+++ b/style.css
@@ -84,7 +84,20 @@ span{
     margin: 0 200px;
     padding: 0 80px;
 }
+.offer img{
+    width: 10%;
+   margin: 0 auto 10px auto;
+   border-radius:80%;
 
+}
+.offer p{
+    text-align:right;
+}
+.pera{
+    margin: 0 80px;
+    padding: 0 20px;
+    
+}
 
 footer{
     background-color: rgb(1, 18, 73);
@@ -92,6 +105,7 @@ footer{
     text-align: center;
     font-size: 15px;
     padding: 3%;
+    margin-top: 5%;
    
    
 }
