--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
-body{
-  
+body{ 
 font-family: 'Poppins', sans-serif;
 }
 h1{
-    font-size: 50px;
-   
+    font-size: 50px;  
     color: rgb(112, 109, 109);
 }
 h2{
     font-size: 35px;
     color: rgb(133, 129, 129);
-
 }
 h3{
     font-size: 25px;
@@ -28,6 +25,10 @@ span{
 }
 .flex-cont{
     display: flex;
+}
+#food{
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .back-img{
     background-image: url(images/Frame\ 59.jpg);
@@ -57,22 +58,18 @@ span{
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-  
 }
 .second-p{
     font-size: 15px;
     margin-bottom: 10%;
 }
-.recipe{
-    text-align: center;
-}
 .recipe p{
     font-size: small;
 }
 .recipe-title{
-    box-shadow: 10px 10px 30px rgb(153, 148, 148);
+    box-shadow: 10px 10px 30px rgb(216, 214, 214);
     padding: 1%;
-    margin: 5%;
+    margin: 3%;
     border-radius: 20px;  
 }
 .recipe-title img{
@@ -88,24 +85,38 @@ span{
     width: 10%;
    margin: 0 auto 10px auto;
    border-radius:80%;
-
 }
 .offer p{
     text-align:right;
 }
 .pera{
     margin: 0 80px;
-    padding: 0 20px;
-    
+    padding: 0 20px;   
 }
-
+#off-h1{
+    color: rgb(243, 72, 72) ;
+    text-decoration: teal;
+}
+.you-like{
+    box-shadow: 5px 5px 20px rgb(236, 104, 104);
+    padding: 1%;
+    margin-top: 4%;
+    margin-bottom: 10%;
+    border-radius: 20px;  
+}
+input{
+    font-size: 20px;
+    color: white;
+    background-color: rgb(230, 13, 230);
+    padding: 5px 15px;
+    margin: 1px 5px;
+    border-radius: 10px;
+}
 footer{
     background-color: rgb(1, 18, 73);
     color:white;
     text-align: center;
-    font-size: 15px;
-    padding: 3%;
-    margin-top: 5%;
-   
-   
+    font-size: 15px; 
+    padding-bottom:5%;
+    padding-top: 1%;    
 }
