--- a/style.css
+++ b/style.css
@@ -94,9 +94,10 @@ span{
     margin: 0 80px;
     padding: 0 20px;   
 }
-#off-h1{
+.off-h1{
     color: rgb(243, 72, 72) ;
-    text-decoration: teal;
+    margin-left: 2%;
+   
 }
 .you-like{
     box-shadow: 5px 5px 20px rgb(236, 104, 104);
@@ -113,6 +114,8 @@ input{
     margin: 1px 5px;
     border-radius: 10px;
 }
+
+
 footer{
     background-color: rgb(1, 18, 73);
     color:white;
